oci/odoo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: odoo-app-deployment
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: odoo-app-deployment

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
      
  template:  
    metadata:
      labels:
        app: odoo-app-deployment
    spec:
      containers:
      - name: odoo-app
        image: docker.io/bitnami/odoo:16
        ports:
        - containerPort: 8069
        volumeMounts:
        - name: odoo-data
          mountPath: /bitnami/odoo

        resources:
        limits:
          cpu: "1"
          memory: "1Gi"
        requests:
          cpu: "500m"
          memory: "512Mi"

      volumes:
      - name: odoo-data
        persistentVolumeClaim:
          claimName: odoo-pvc
