oci/odoo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: odoo-app-svc
  namespace: odoo
spec:
  type: ClusterIP
  selector:
    app: odoo-app-deployment
  ports:
  - port: 80
    targetPort: 8069
